Fix controller layout
Controller layout broke when theming was added. This is now fixed.

--- a/html/controller.css
+++ b/html/controller.css
@@ -2,6 +2,7 @@
     touch-action: manipulation;
 }
 body {
+    margin: 0;
     height: 110vh;
     overflow-y: scroll;
     text-align: center;
